--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         Made By
         <a
           class="footer__link"
-          href=""
+          href="https://github.com/isourav545/lift-simulation"
           target="_blank"
           rel="noopener noreferrer"
-          >Sourav</a
+          >Sourav Ghosh</a
         >
       </p>
     </footer>
