--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             id="input-lifts"
           />
         </div>
-        <button id="input-btn" class="control__button">Generate</button>
+        <button id="input-btn" class="control__button">Simulate</button>
       </form>
     </section>
 
